--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@ hugo.linux
 ### Linux ###
 *~
 
-# temporary files which can be created if a process still has a handle open of a deleted file
+# temporary files which can be created if a process still has a handle open of a del-eted file
 .fuse_hidden*
 
 # KDE directory preferences
