--- a/hugo.toml
+++ b/hugo.toml
@@ -67,4 +67,4 @@ ignoreErrors = ["error-disable-taxonomy"]
     disable = false
     ignoreConfig = false
     ignoreImports = false
-    path = 'https://github.com/milafrerichs/hugo-wikilinks'
+    path = 'github.com/milafrerichs/hugo-wikilinks'
