trying hugo-wikilinks module

--- a/hugo.toml
+++ b/hugo.toml
@@ -61,7 +61,10 @@ ignoreErrors = ["error-disable-taxonomy"]
     lineNos = true
     lineNumbersInTable = false
     codeFences = true
+[markup.goldmark]
+  [markup.goldmark.renderer]
+    unsafe = true
 
-[module]
-  [[module.imports]]
-    path = "github.com/milafrerichs/hugo-wikilinks"
+# [module]
+#  [[module.imports]]
+#    path = "github.com/milafrerichs/hugo-wikilinks"
